Fix stdin/stdout encoding on Windows.
QTextStream uses the system default locale, but this breaks in
various situations: (1) It does not work on the native Windows shell
(cmd.exe, Powershell), since the default Windows locale is Windows-1252,
but the shell uses Windows-850. (2) It also breaks on *nix systems where
the locale is Latin1 or C, which is the case for most CI systems or
build servers.

We allow overriding the detected codec by setting the ENCODING_OVERRIDE
environment variable, but otherwise prefer Windows-850 on Windows and
UTF-8 on any other system, even if LANG is set to something else.

This resolves #2413

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -70,10 +70,9 @@ set(keepassx_SOURCES
         core/Clock.cpp
         core/Tools.cpp
         core/Translator.cpp
-        core/Base32.h
         core/Base32.cpp
         cli/Utils.cpp
-        cli/Utils.h
+        cli/TextStream.cpp
         crypto/Crypto.cpp
         crypto/CryptoHash.cpp
         crypto/Random.cpp
